--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "gatsby-starter-blog-amp-to-pwa",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A starter for a blog(AMP and PWA) powered by Gatsby and Markdown",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Tomoyuki Kashiro <ksrtmyk@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/tomoyukikashiro/gatsby-starter-blog-amp-to-pwa/issues"
   },
   "dependencies": {
     "gatsby": "^2.1.10",
@@ -35,15 +35,17 @@
     "typography": "^0.16.18",
     "typography-theme-wordpress-2016": "^0.16.18"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/tomoyukikashiro/gatsby-starter-blog-amp-to-pwa#readme",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "amp",
+    "pwa"
   ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/tomoyukikashiro/gatsby-starter-blog-amp-to-pwa.git"
   },
   "scripts": {
     "build": "gatsby build",
